[package]
name = "candump"
license = "MIT/Apache-2.0"
authors = ["Tim Lucas Sabelmann <tsabelmann>"]
categories = ["command-line-utilities"]
description = "Logs CAN-bus data binary instead of texual"
homepage = "https://github.com/tsabelmann/candump-rs"
keywords = ["can", "binary", "socketcan"]
repository = "https://github.com/tsabelmann/candump-rs"
readme = "README.md"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.10"}
socketcan = "1.7.0"
chrono = "0.4"